--- a/src/app/universidad/view/evaluacionDocente/reporte-pregunta/reporte-pregunta.component.html
+++ b/src/app/universidad/view/evaluacionDocente/reporte-pregunta/reporte-pregunta.component.html
@@ -1,3 +1,26 @@
-<p>
-  reporte-pregunta works!
-</p>
+<p-panel header="Calificaciones por Cuestionario">
+  <p-table [value]="cuestionarios1" autoLayout="true">
+      <ng-template pTemplate="header">
+          <tr>
+              <th>Cuestionario</th>
+              <th>Evaluacion</th>
+              <th>NRC</th>
+              <th>Persona</th>
+              <th>Fecha</th>
+              <th>Calificacion</th>
+              
+          </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-cuestionario>
+          <tr>
+              <td>{{cuestionario.codCuestionario}}</td>
+              <td>{{cuestionario.codEvaluacion}}</td>
+              <td>{{cuestionario.codNrc}}</td>
+              <td>{{cuestionario.persona}}</td>
+              <td>{{cuestionario.fecha}}</td>
+              <td>{{cuestionario.calificacion}}</td>
+              
+          </tr>
+      </ng-template>
+  </p-table>
+</p-panel>
