--- a/src/app/universidad/view/facturacion/factura/factura.component.html
+++ b/src/app/universidad/view/facturacion/factura/factura.component.html
@@ -1,7 +1,119 @@
 <div class="card card-w-title">
-    <h1>Detalle</h1>
-    <p-table [columns]="cols" [value]="facturas" selectionMode="single" dataKey="numeroFactura" [style]="{'margin-bottom':'20px'}"
-      [(selection)]="facturaSeleccionada" [responsive]="true">
+  <h1>Facturas de Alumno</h1>
+  <p-table #dt [columns]="cols" [value]="facturas" selectionMode="single" dataKey="_id" [style]="{'margin-bottom':'20px'}"
+    [(selection)]="facturaSeleccionada" [responsive]="true" (onRowSelect)="ver($event)">
+
+
+    <ng-template pTemplate="caption">
+      <div style="text-align: right">
+        <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
+        <input type="text" pInputText size="50" placeholder="Buscar Factura" (input)="dt.filterGlobal($event.target.value, 'contains')"
+          style="width:auto">
+      </div>
+    </ng-template>
+
+    <ng-template pTemplate="header" let-columns>
+      <tr>
+        <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+          {{col.header}}
+          <p-sortIcon [field]="col.field"></p-sortIcon>
+        </th>
+
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-rowData let-columns="columns">
+      <tr [pSelectableRow]="rowData">
+        <td *ngFor="let col of columns">
+          <span class="ui-column-title">{{col.header}}</span>
+          {{rowData[col.field]}}
+        </td>
+
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
+
+
+<p-dialog header="Factura" [(visible)]="diag" [responsive]="true" showEffect="fade" [modal]="true" [width]="600">
+
+  <div class="card card-w-title">
+    <div class="ui-g">
+
+      <div class="ui-g-6 ui-md-5">
+        <span>
+          <i class="fa fa-hashtag"></i>
+          <strong> &nbsp; &nbsp;Numero Factura: </strong>
+        </span>
+      </div>
+      <div class="ui-g-6 ui-md-7">
+        <span>
+          {{facturaSeleccionada.numeroFactura}}
+        </span>
+      </div>
+
+      <div class="ui-g-6 ui-md-5">
+        <span>
+          <i class="fa fa-user"></i>
+          <strong> &nbsp; &nbsp;Estudiante: </strong>
+        </span>
+      </div>
+      <div class="ui-g-6 ui-md-7">
+        <span>
+          {{estudiante.nombre}}
+        </span>
+      </div>
+
+      <div class="ui-g-6 ui-md-5">
+        <span>
+          <i class="fa fa-calendar"></i>
+          <strong> &nbsp; &nbsp;Fecha de emision: </strong>
+        </span>
+      </div>
+      <div class="ui-g-6 ui-md-7">
+        <span>
+          {{facturaSeleccionada.fechaDeEmision}}
+        </span>
+      </div>
+
+      <div class="ui-g-6 ui-md-5">
+        <span>
+          <i class="fa fa-money"></i>
+          <strong> &nbsp; &nbsp;Total: </strong>
+        </span>
+      </div>
+      <div class="ui-g-6 ui-md-7">
+        <span>
+          {{facturaSeleccionada.total}}
+        </span>
+      </div>
+      <div class="ui-g-6 ui-md-5">
+        <span>
+          <i class="fa fa-check"></i>
+          <strong> &nbsp; &nbsp;Estado: </strong>
+        </span>
+      </div>
+      <div class="ui-g-6 ui-md-7">
+        <span>
+          {{facturaSeleccionada.estado}}
+        </span>
+      </div>
+    </div>
+
+    <div class="ui-g-6 ui-md-5">
+      <span>
+        <i class="fa fa-calendar"></i>
+        <strong> &nbsp; &nbsp;Fecha de pago: </strong>
+      </span>
+    </div>
+    <div class="ui-g-6 ui-md-7">
+      <span>
+        {{facturaSeleccionada.fechapago}}
+      </span>
+    </div>
+
+    <h1>Detalles de Factura</h1>
+    <p-table [columns]="colsDet" [value]="facturaSeleccionada.detalles" selectionMode="single" dataKey="_id" [style]="{'margin-bottom':'20px'}"
+      [(selection)]="detalle" [responsive]="true">
       <ng-template pTemplate="caption">
         Facturas
       </ng-template>
@@ -25,3 +137,14 @@
       </ng-template>
     </p-table>
   </div>
+
+
+  <p-footer>
+
+
+    <div class="ui-dialog-buttonpane ui-helper-clearfix">
+      <button *ngIf="adm" type="button" pButton icon="fa fa-check" (click)="cancelarFactura()" label="Cobrar"></button>
+      <button type="button" pButton icon="fa fa-close" (click)="cerrar()" label="Cerrar"></button>
+    </div>
+  </p-footer>
+</p-dialog>
