--- a/src/app/universidad/view/registro/registro.component.html
+++ b/src/app/universidad/view/registro/registro.component.html
@@ -110,7 +110,13 @@
         
                 <div class="ui-g-12 ui-md-12">
                   <label for="">Password</label>
-                  <input pPassword [(ngModel)]="claveMD5" type="password" required/>
+                </div>
+                  <div class="ui-inputgroup ui-g-12 ui-md-12">
+                  <input pPassword [(ngModel)]="claveMD5" type="{{tipoENtradaPssw}}" required/>
+                  <button type="button" pButton (click)="mostrarClave()" label="{{labelENtradaPssw}}"></button>                
+                </div>
+                <div class="ui-g-12 ui-md-12">
+                  <button type="button" pButton (click)="generarClave()" label="Generar Clave"></button>
                 </div>
                 <div class="card card-w-title ui-g-12 ui-md-12">
                   <h1>Activo</h1>
