--- a/src/app/universidad/view/notificaciones/plantillas/plantillas.component.html
+++ b/src/app/universidad/view/notificaciones/plantillas/plantillas.component.html
@@ -1,6 +1,6 @@
 <div class="ui-g ui-fluid">
   <div class="card card-w-title">
-    <h1>Registro</h1>
+    <h1>Gestión de Plantillas</h1>
     <p-table [columns]="cols" [value]="plantillas" selectionMode="single" dataKey="_id" [(selection)]="plantilla" [responsive]="true"
       [paginator]="true" [rows]="10" [responsive]="true" paginatorPosition="bottom" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
       <ng-template pTemplate="caption">
@@ -30,9 +30,35 @@
       </ng-template>
     </p-table>
     <div class="ui-g-12 ui-md-4">
-      <button pButton type="button" label="Nuevo" style="margin-bottom:10px" class="ui-button-raised" (click)="nuevo()"></button>
+      <button pButton type="button" label="Nuevo" style="margin-bottom:10px" class="ui-button-raised" (click)="activarNuevaPlantilla()"></button>
     </div>
   </div>
+  <h1>Gestión de Medios</h1>
+    <p-table [columns]="cols2" [value]="medios" selectionMode="single" dataKey="_id" [(selection)]="medio" [responsive]="true"
+      [paginator]="true" [rows]="10" [responsive]="true" paginatorPosition="bottom" (onRowSelect)="onRowSelect2($event)" (onRowUnselect)="onRowUnselect($event)">
+      <ng-template pTemplate="caption">
+        Medios
+      </ng-template>
+      <ng-template pTemplate="header" let-columns>
+        <tr>
+          <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+            {{col.header}}
+            <p-sortIcon [field]="col.field"></p-sortIcon>
+          </th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-rowData let-columns="columns">
+        <tr [pSelectableRow]="rowData">
+          <td *ngFor="let col of columns">
+            <span class="ui-column-title">{{col.header}}</span>
+            {{rowData[col.field]}}
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+    <div class="ui-g-12 ui-md-4">
+      <button pButton type="button" label="Nuevo" style="margin-bottom:10px" class="ui-button-raised" (click)="activarNuevoMedio()"></button>
+    </div>
 </div>
 
 <p-dialog header="Detalle de Plantilla" [(visible)]="detalleVis" [responsive]="true" showEffect="fade" [modal]="true" [width]="600">
@@ -50,13 +76,94 @@
   </div>
   <p-footer>
     <div class="ui-dialog-buttonpane ui-helper-clearfix">
-      <button type="button" pButton icon="fa fa-close" (click)="elimnarPlantilla()" label="Eliminar"></button>
-      <button type="button" pButton icon="fa fa-check" (click)="guardarPlantilla()" label="Guardar"></button>
+      <button type="button" pButton icon="fa fa-close" (click)="eliminarPlantilla()" label="Eliminar"></button>
+      <button type="button" pButton icon="fa fa-check" (click)="modificarPlantilla()" label="Modificar"></button>
     </div>
   </p-footer>
 </p-dialog>
 
+<p-dialog header="Detalle de Medio" [(visible)]="detalleVis2" [responsive]="true" showEffect="fade" [modal]="true" [width]="600">
+  <div class="card card-w-title">
+    <div class="ui-g">
 
+      <div class="ui-g-12 ui-md-4">
+        <input type="text" [(ngModel)]="medio.nombre" pInputText placeholder="Nombre Medio" required>
+      </div>
+      <div class="ui-g-12 ui-md-12">
+        <input type="text" [(ngModel)]="medio.estado" pInputText placeholder="Estado Medio" required>
+      </div>
+
+    </div>
+  </div>
+  <p-footer>
+    <div class="ui-dialog-buttonpane ui-helper-clearfix">
+      <button type="button" pButton icon="fa fa-close" (click)="eliminarMedio()" label="Eliminar"></button>
+      <button type="button" pButton icon="fa fa-check" (click)="modificarMedio()" label="Modificar"></button>
+    </div>
+  </p-footer>
+</p-dialog>
+
+<p-dialog header="Nuevo Medio" [(visible)]="detalleVis3" [responsive]="true" showEffect="fade" [modal]="true" [width]="600">
+  <div class="card card-w-title">
+    <div class="ui-g">
+
+      <div class="ui-g-12 ui-md-4">
+        <input type="text" [(ngModel)]="nuevoMedio.nombre" pInputText placeholder="Nombre Medio" required>
+      </div>
+      <div class="ui-g-12 ui-md-12">
+        <input type="text" [(ngModel)]="nuevoMedio.estado" pInputText placeholder="Estado Medio" required>
+      </div>
+
+    </div>
+  </div>
+  <p-footer>
+    <div class="ui-dialog-buttonpane ui-helper-clearfix">
+      <button type="button" pButton icon="fa fa-check" (click)="insertarMedio()" label="Insertar"></button>
+    </div>
+  </p-footer>
+</p-dialog>
+
+<p-dialog header="Nueva Plantilla" [(visible)]="detalleVis4" [responsive]="true" showEffect="fade" [modal]="true" [width]="600">
+  <div class="card card-w-title">
+    <div class="ui-g">
+
+      <div class="ui-g-12 ui-md-4">
+        <input type="text" [(ngModel)]="nuevaPlantilla.nombre" pInputText placeholder="Nombre Plantilla" required>
+      </div>
+      <div class="ui-g-12 ui-md-12">
+        <input type="text" [(ngModel)]="nuevaPlantilla.estado" pInputText placeholder="Estado Plantilla" required>
+      </div>
+      <div class="ui-g-12 ui-md-12">
+        <input type="text" [(ngModel)]="nuevaPlantilla.mensaje" pInputText placeholder="Mensaje Plantilla" required>
+      </div>
+    </div>
+  </div>
+  <p-footer>
+    <div class="ui-dialog-buttonpane ui-helper-clearfix">
+      <button type="button" pButton icon="fa fa-check" (click)="mostrarInsertarVariable()" label="Insertar Variable"></button>
+      <button type="button" pButton icon="fa fa-check" (click)="insertarPlantilla()" label="Insertar Plantilla"></button>
+    </div>
+  </p-footer>
+</p-dialog>
+
+<p-dialog header="Nueva Variable" [(visible)]="detalleVis5" [responsive]="true" showEffect="fade" [modal]="true" [width]="600">
+  <div class="card card-w-title">
+    <div class="ui-g">
+
+      <div class="ui-g-12 ui-md-4">
+        <input type="text" [(ngModel)]="nuevaVariablePlantilla.nombre" pInputText placeholder="Nombre Variable" required>
+      </div>
+      <div class="ui-g-12 ui-md-12">
+        <input type="text" [(ngModel)]="nuevaVariablePlantilla.posicion" pInputText placeholder="Posición Variable" required>
+      </div>
+    </div>
+  </div>
+  <p-footer>
+    <div class="ui-dialog-buttonpane ui-helper-clearfix">
+      <button type="button" pButton icon="fa fa-check" (click)="InsertarVariable()" label="Insertar Variable"></button>
+    </div>
+  </p-footer>
+</p-dialog>
 
 <p-dialog header="Variables de plantilla" [(visible)]="variableList" [responsive]="true" showEffect="fade" [modal]="true"
   [width]="600">
