--- a/src/app/universidad/view/gestionsilabus/seguimiento/seguimiento.component.html
+++ b/src/app/universidad/view/gestionsilabus/seguimiento/seguimiento.component.html
@@ -1,3 +1,46 @@
-<p>
-  seguimiento works!
-</p>
+<p-messages [(value)]="msgs"></p-messages>
+<div class="card card-w-title">
+  <h1>Seguimiento</h1>
+  <div class="ui-g form-group">
+
+    <p-table [columns]="cols" [value]="seguimiento" selectionMode="single" dataKey="_id" [style]="{'margin-bottom':'20px'}" [(selection)]="data"
+      [responsive]="true" (onRowSelect)="editarRegistro($event)" [paginator]="true" [rows]="10" [responsive]="true" paginatorPosition="top">
+
+      <ng-template pTemplate="header" let-columns>
+        <tr>
+          <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+            {{col.header}}
+            <p-sortIcon [field]="col.field"></p-sortIcon>
+          </th>
+          <th>
+
+          </th>
+        </tr>
+      </ng-template>
+    <ng-template pTemplate="body" let-rowData let-columns="columns">
+        <tr [pSelectableRow]="rowData">
+         
+            <td *ngFor="let col of columns">
+                {{rowData[col.field]}}
+            </td>
+            
+            <td>
+              <p-dropdown [options]="revisado" optionLabel="descripcion"  [autoWidth]="false"></p-dropdown>
+
+          </td>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="summary">
+        <ul>
+            <li *ngFor="let car of selectedCars3" style="text-align: left">
+          
+            </li>
+        </ul>
+    </ng-template>
+    </p-table>
+    <div class="ui-g-12 ui-md-4">
+        <p-messages [value]="msgs"></p-messages>
+        
+      <button type="button" pButton (click)="showError()" label="GUARDAR" class="ui-button-info" style="width:100px"></button>
+    </div>
+</div>
