--- a/src/app/virtual/view/anuncio/anuncio.component.html
+++ b/src/app/virtual/view/anuncio/anuncio.component.html
@@ -1,65 +1,74 @@
-<div *ngIf="selectUsuario()">
-  <div class="ui-g ui-fluid">
-    <div class="ui-g-12 ui-lg-12">
-      <!-- Left Side -->
-      <div class="card card-w-title">
-        <h1>Publicar anuncio</h1>
-        <div class="ui-g form-group">
+<div class="card card-w-title">
+  <select [(ngModel)]="curso">
+    <option *ngFor="let nrc of nrcs">{{nrc.codNrc}}</option>
+  </select>
+  <button pButton type="button" label="Seleccionar curso" style="margin-bottom:10px" class="ui-button-raised" (click)="buscarCurso()"></button>
+</div>
+<div *ngIf="selectCurso">
 
-          <div class="ui-g-12 ui-md-6">
-            <input type="text" [(ngModel)]="anuncio.tema" pInputText placeholder="Tema" required>
-          </div>
-          <div class="ui-g-12 ui-md-6">
-            <textarea rows="4" cols="50" [(ngModel)]="anuncio.descripcion" placeholder="Ingrese la descripción del anuncio" required>  </textarea>
-          </div>
-          <div class="ui-g-6 ui-md-4">
-            <button pButton type="button" label="Publicar Anuncio" style="margin-bottom:10px" class="ui-button-raised" (click)="guardarAnuncio()"></button>
+  <div *ngIf="selectUsuario()">
+    <div class="ui-g ui-fluid">
+      <div class="ui-g-12 ui-lg-12">
+        <!-- Left Side -->
+        <div class="card card-w-title">
+          <h1>Publicar anuncio</h1>
+          <div class="ui-g form-group">
+
+            <div class="ui-g-12 ui-md-6">
+              <input type="text" [(ngModel)]="anuncio.tema" pInputText placeholder="Tema" required>
+            </div>
+            <div class="ui-g-12 ui-md-6">
+              <textarea rows="4" cols="50" [(ngModel)]="anuncio.descripcion" placeholder="Ingrese la descripción del anuncio" required>  </textarea>
+            </div>
+            <div class="ui-g-6 ui-md-4">
+              <button pButton type="button" label="Publicar Anuncio" style="margin-bottom:10px" class="ui-button-raised" (click)="guardarAnuncio()"></button>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-<div class="card card-w-title">
-  <h1>Anuncios</h1>
-  <p-table [columns]="cols" [value]="anuncios" selectionMode="single" dataKey="codigo" [style]="{'margin-bottom':'20px'}" [(selection)]="anuncioSeleccionado"
-    [responsive]="true" [paginator]="true" [rows]="10" [responsive]="true" paginatorPosition="both">
-    <ng-template pTemplate="caption">
-      Anuncios
-    </ng-template>
-    <ng-template pTemplate="header" let-columns>
-      <tr>
-        <th *ngFor="let col of columns" [pSortableColumn]="col.field">
-          {{col.header}}
-          <p-sortIcon [field]="col.field"></p-sortIcon>
-        </th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-rowData let-columns="columns">
-      <tr [pSelectableRow]="rowData">
-        <td>
-          {{rowData.codigo}}
-        </td>
-        <td>
-          {{rowData.curso }}
-        </td>
-        <td>
-          {{rowData.tema}}
-        </td>
-        <td>
-          {{rowData.descripcion }}
-        </td>
-        <td>
-          {{(rowData.fecha.split("T"))[0]}}, {{((rowData.fecha.split("T"))[1].split(":"))[0]}}:{{((rowData.fecha.split("T"))[1].split(":"))[1]}}
-        </td>
-        <div *ngIf="selectUsuario()">
+  <div class="card card-w-title">
+    <h1>Anuncios</h1>
+    <p-table [columns]="cols" [value]="anuncios" selectionMode="single" dataKey="codigo" [style]="{'margin-bottom':'20px'}" [(selection)]="anuncioSeleccionado"
+      [responsive]="true" [paginator]="true" [rows]="10" [responsive]="true" paginatorPosition="both">
+      <ng-template pTemplate="caption">
+        Anuncios
+      </ng-template>
+      <ng-template pTemplate="header" let-columns>
+        <tr>
+          <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+            {{col.header}}
+            <p-sortIcon [field]="col.field"></p-sortIcon>
+          </th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-rowData let-columns="columns">
+        <tr [pSelectableRow]="rowData">
           <td>
-            <button pButton icon="fa-edit" (click)="editarAnuncio(rowData)"></button>
-            &nbsp;&nbsp;
-            <button pButton icon="fa-trash" (click)="eliminarAnuncio(rowData)"></button>
+            {{rowData.codigo}}
           </td>
-        </div>
-      </tr>
-    </ng-template>
-  </p-table>
+          <td>
+            {{rowData.curso }}
+          </td>
+          <td>
+            {{rowData.tema}}
+          </td>
+          <td>
+            {{rowData.descripcion }}
+          </td>
+          <td>
+            {{(rowData.fecha.split("T"))[0]}}, {{((rowData.fecha.split("T"))[1].split(":"))[0]}}:{{((rowData.fecha.split("T"))[1].split(":"))[1]}}
+          </td>
+          <div *ngIf="selectUsuario()">
+            <td>
+              <button pButton icon="fa-edit" (click)="editarAnuncio(rowData)"></button>
+              &nbsp;&nbsp;
+              <button pButton icon="fa-trash" (click)="eliminarAnuncio(rowData)"></button>
+            </td>
+          </div>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
 </div>
