--- a/src/app/virtual/view/foro/foro.component.html
+++ b/src/app/virtual/view/foro/foro.component.html
@@ -1,81 +1,91 @@
-<div *ngIf="selectUsuario()">
-  <div class="ui-g ui-fluid">
-    <div class="ui-g-12 ui-lg-12">
-      <!-- Left Side -->
-      <div class="card card-w-title">
-        <h1>Publicar foro</h1>
-        <div class="ui-g form-group">
+<div class="card card-w-title">
+  <select [(ngModel)]="curso">
+    <option *ngFor="let nrc of nrcs">{{nrc.codNrc}}</option>
+  </select>
+  <button pButton type="button" label="Seleccionar curso" style="margin-bottom:10px" class="ui-button-raised" (click)="buscarCurso()"></button>
+</div>
+<div *ngIf="selectCurso">
 
-          <div class="ui-g-12 ui-md-6">
-            <input type="text" [(ngModel)]="foro.tema" pInputText placeholder="Tema" required>
-          </div>
-          <div class="ui-g-12 ui-md-6">
-            <textarea rows="4" cols="50" [(ngModel)]="foro.descripcion" placeholder="Ingrese la descripción del Foro" required>  </textarea>
-          </div>
-          <div class="ui-g-12 ui-md-6">
-            <input type="date" [(ngModel)]="foro.fechaInicio" pInputText placeholder="Fecha de inicio" required>
-          </div>
-          <div class="ui-g-12 ui-md-6">
-            <input type="date" [(ngModel)]="foro.fechaFin" pInputText placeholder="Fecha final" required>
-          </div>
-          <div class="ui-g-6 ui-md-4">
-            <button pButton type="button" label="Publicar Foro" style="margin-bottom:10px" class="ui-button-raised" (click)="guardarForo()"></button>
+  <div *ngIf="selectUsuario()">
+    <div class="ui-g ui-fluid">
+      <div class="ui-g-12 ui-lg-12">
+        <!-- Left Side -->
+        <div class="card card-w-title">
+          <h1>Publicar foro</h1>
+          <div class="ui-g form-group">
+
+            <div class="ui-g-12 ui-md-6">
+              <input type="text" [(ngModel)]="foro.tema" pInputText placeholder="Tema" required>
+            </div>
+            <div class="ui-g-12 ui-md-6">
+              <textarea rows="4" cols="50" [(ngModel)]="foro.descripcion" placeholder="Ingrese la descripción del Foro" required>  </textarea>
+            </div>
+            <div class="ui-g-12 ui-md-6">
+              <input type="date" [(ngModel)]="foro.fechaInicio" pInputText placeholder="Fecha de inicio" required>
+            </div>
+            <div class="ui-g-12 ui-md-6">
+              <input type="date" [(ngModel)]="foro.fechaFin" pInputText placeholder="Fecha final" required>
+            </div>
+            <div class="ui-g-6 ui-md-4">
+              <button pButton type="button" label="Publicar Foro" style="margin-bottom:10px" class="ui-button-raised" (click)="guardarForo()"></button>
+            </div>
           </div>
         </div>
       </div>
+    </div> 
+    <div class="card card-w-title">
+      <h1>Foros</h1>
+      
+      <p-table [columns]="cols" [value]="foros" selectionMode="single" dataKey="codigo" [style]="{'margin-bottom':'20px'}" [(selection)]="anuncioSeleccionado"
+          [responsive]="true" [paginator]="true" [rows]="10" [responsive]="true" paginatorPosition="both">
+          <ng-template pTemplate="caption">
+              Foros
+          </ng-template>
+          <ng-template pTemplate="header" let-columns>
+              <tr>
+                  <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+                      {{col.header}}
+                      <p-sortIcon [field]="col.field"></p-sortIcon>
+                  </th>
+              </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-rowData let-columns="columns">
+              <tr [pSelectableRow]="rowData" >
+                              
+                  <td (click)="verParticipaciones(rowData)">
+                    {{rowData.codigo}}
+                  </td>
+                  <td>
+                      {{rowData.curso }}
+                  </td>
+                  <td>
+                      {{rowData.tema}}
+                  </td>
+                  <td>  
+                      {{rowData.descripcion }}
+                  </td>
+                  <td>
+                    {{rowData.fechaInicio}}
+                  </td>
+                  <td>
+                    {{rowData.fechaFin}}
+                  </td>
+                <div *ngIf="selectUsuario()">
+                  <td>
+                    <button pButton icon="fa-edit" (click)="editarForo(rowData)"></button>
+                    &nbsp;&nbsp;
+                    <button pButton icon="fa-trash" (click)="eliminarForo(rowData)"></button>
+                  </td>
+                </div>
+              </tr>
+          </ng-template>
+      </p-table>
     </div>
   </div>
+  
+  <p-dialog header="Participaciones" [(visible)]="participaciones" [responsive]="true" showEffect="fade" [modal]="true" [width]="1000">
+    <div *ngIf="participaciones">
+      <app-foroAlumno [foroComponent]=enviarForo></app-foroAlumno>
+    </div>
+  </p-dialog>
 </div>
-<div class="card card-w-title">
-  <h1>Foros</h1>
-
-  <p-table [columns]="cols" [value]="foros" selectionMode="single" dataKey="codigo" [style]="{'margin-bottom':'20px'}" [(selection)]="anuncioSeleccionado"
-    [responsive]="true" [paginator]="true" [rows]="10" [responsive]="true" paginatorPosition="both">
-    <ng-template pTemplate="caption">
-      Foros
-    </ng-template>
-    <ng-template pTemplate="header" let-columns>
-      <tr>
-        <th *ngFor="let col of columns" [pSortableColumn]="col.field">
-          {{col.header}}
-          <p-sortIcon [field]="col.field"></p-sortIcon>
-        </th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-rowData let-columns="columns">
-      <tr [pSelectableRow]="rowData">
-
-        <td (click)="verParticipaciones(rowData)">
-          {{rowData.codigo}}
-        </td>
-        <td>
-          {{rowData.curso }}
-        </td>
-        <td>
-          {{rowData.tema}}
-        </td>
-        <td>
-          {{rowData.descripcion }}
-        </td>
-        <td>
-          {{(rowData.fechaInicio.split("T"))[0]}}, {{((rowData.fechaInicio.split("T"))[1].split(":"))[0]}}:{{((rowData.fechaInicio.split("T"))[1].split(":"))[1]}}
-        </td>
-        <td>
-          {{(rowData.fechaFin.split("T"))[0]}}, {{((rowData.fechaFin.split("T"))[1].split(":"))[0]}}:{{((rowData.fechaFin.split("T"))[1].split(":"))[1]}}
-        </td>
-        <div *ngIf="selectUsuario()">
-          <td>
-            <button pButton icon="fa-edit" (click)="editarForo(rowData)"></button>
-            &nbsp;&nbsp;
-            <button pButton icon="fa-trash" (click)="eliminarForo(rowData)"></button>
-          </td>
-        </div>
-      </tr>
-    </ng-template>
-  </p-table>
-</div>
-<p-dialog header="Participaciones" [(visible)]="participaciones" [responsive]="true" showEffect="fade" [modal]="true" [width]="1000">
-  <div *ngIf="participaciones">
-    <app-foroAlumno [foroComponent]=enviarForo></app-foroAlumno>
-  </div>
-</p-dialog>
