--- a/src/app/virtual/view/wiki/wiki.component.html
+++ b/src/app/virtual/view/wiki/wiki.component.html
@@ -1,3 +1,11 @@
+<div class="card card-w-title">
+  <select [(ngModel)]="curso">
+    <option *ngFor="let nrc of nrcs">{{nrc.codNrc}}</option>
+  </select>
+  <button pButton type="button" label="Seleccionar curso" style="margin-bottom:10px" class="ui-button-raised" (click)="buscarCurso()"></button>
+</div>
+<div *ngIf="selectCurso">
+
 <div *ngIf="selectUsuario()">
   <div class="ui-g ui-fluid">
     <div class="ui-g-12 ui-lg-12">
@@ -68,7 +76,7 @@
       </ng-template>
   </p-table>
 </div>
-
+</div>
   
   
 
